data/derived/comb/progs/unify/prog0461.ml.out
Characters 144-173:
  if (randNum = 1 && randNum2 = 3) then buildSine(buildOp1(buildX())) else
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
